--- a/src/content/docs/labs/lab0.mdx
+++ b/src/content/docs/labs/lab0.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Lab 0: Tutorial, Button Handling, Stopwatch"
-description: Introductory tutorial to embedded system platform and development environment
+title: "Lab 0: Stopwatch"
+description: Introductory lab to set up the embedded environment and implement a basic stopwatch application.
 links:
 - /guides/ccs/setupguide/
 - /guides/labtimeline/
