--- a/src/content/docs/labs/lab1.mdx
+++ b/src/content/docs/labs/lab1.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Lab 1 — Sensor Hub"
+title: "Lab 1: Sensor Hub"
 description: "Learn how to add sound feedback, navigate between screens, and organize modular code."
 links:
 - /labs/lab0/
