Actualiza el enlace de Lab 2 a "FreeRTOS Stopwatch" y modifica su descripción para reflejar el uso de tareas y colas en FreeRTOS.

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -45,20 +45,11 @@ import freertos from '../../assets/freertos.png';
     description="Interface with multiple sensors using I2C, ADC, and PWM while building a real-time dashboard."
     href="/labs/lab1/"
   />  
-  {false && (
   <LinkCard
-    title="Lab 2 – Spectrum Analyzer"
-    description="Implement a real-time FFT audio analyzer and visualize frequency bands on the LCD."
+    title="Lab 2 – FreeRTOS Stopwatch"
+    description="Implement a real-time stopwatch using FreeRTOS tasks and queues."
     href="/labs/lab2/"
-    class="opacity-50 pointer-events-none cursor-not-allowed"
-  /> )}
-    {false && (
-
-  <LinkCard
-    title="Lab 3 – RTOS Integration"
-    description="Migrate to FreeRTOS, manage concurrent tasks, and synchronize data across threads."
-    href="/labs/lab3/"
-  /> )}
+  />
     {false && (
   <LinkCard
     title="Lab 4 – RTOS Snake Game"
