Actualiza el título y la descripción del Lab 2 a "FreeRTOS Stopwatch", reflejando el uso de tareas y colas en FreeRTOS.

--- a/src/content/docs/guides/labTimeline.mdx
+++ b/src/content/docs/guides/labTimeline.mdx
@@ -50,12 +50,11 @@ import {
   <LinkButton href="/labs/lab1/" target="_blank">View Lab 1 →</LinkButton>
   </Card>
 
-  <Card title="Lab 2 – 8-Band Spectrum Analyzer" icon="seti:audio">
+  <Card title="Lab 2 – FreeRTOS Stopwatch" icon="seti:audio">
     <Badge text="Due Nov 12" variant="note" size="medium" />
-    <p><strong>Objective:</strong> Implement a real-time audio spectrum analyzer using FFT on sampled audio.</p>
-    <p><strong>Highlights:</strong> ADC + DMA, circular buffers, 256-point FFT, dB conversion,
-    and performance measurement.</p>
-  {/* <LinkButton href="/labs/lab2/" target="_blank">View Lab 2 →</LinkButton> */}
+    <p><strong>Objective:</strong> Implement a real-time stopwatch using FreeRTOS tasks and queues.</p>
+    <p><strong>Highlights:</strong> Task creation, queue management, and timer synchronization.</p>
+    <LinkButton href="/labs/lab2/" target="_blank">View Lab 2 →</LinkButton>
   </Card>
 
   <Card title="Lab 3 – Migration to FreeRTOS" icon="document">
