--- a/src/content/docs/guides/FreeRTOS/freertosproyects.mdx
+++ b/src/content/docs/guides/FreeRTOS/freertosproyects.mdx
@@ -163,6 +163,8 @@ Create a simple <code>main.cpp</code> (Right-click the project &gt; New &gt; Sou
 #include <stdbool.h>
 
 extern "C" {
+#include "driverlib/fpu.h"
+#include "driverlib/interrupt.h"
 #include "driverlib/sysctl.h"
 #include "driverlib/gpio.h"
 #include "driverlib/pin_map.h"
